Fixed some Pointer handling which used ToInt32() calls. They can throw an OverflowException on x64 systems. Added an extension method for pointer addition.

--- a/MediaPortal/Source/UI/Players/DirectShowWrapper/DirectShowWrapper.csproj
+++ b/MediaPortal/Source/UI/Players/DirectShowWrapper/DirectShowWrapper.csproj
@@ -67,6 +67,7 @@
     <Compile Include="DirectShowLib.cs" />
     <Compile Include="DSHelper.cs" />
     <Compile Include="DVDIf.cs" />
+    <Compile Include="PointerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
