--- a/MediaPortal/Source/Core/MediaPortal.Utilities/MediaPortal.Utilities.csproj
+++ b/MediaPortal/Source/Core/MediaPortal.Utilities/MediaPortal.Utilities.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -95,6 +95,7 @@
     <Compile Include="Network\Netbios\NbNsStatistics.cs" />
     <Compile Include="Network\Netbios\NbPacketSegmentBase.cs" />
     <Compile Include="OrdinalStringComparer.cs" />
+    <Compile Include="Pointers\PointerExtensions.cs" />
     <Compile Include="Process\Ipc.cs" />
     <Compile Include="Process\IpcClient.cs" />
     <Compile Include="Process\IpcServer.cs" />
